Made the sidebar use grid and used   align-content: start; and  grid-template-rows: repeat(3, auto); to ensure that the size of each grid-item's height or row is based on the content inside of it

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     margin: 0;
 }
 
+html,
+body {
+    min-height: 100vh;
+}
+
 body {
     display: grid;
     grid-template: repeat(4, 1fr) / repeat(4, 1fr);
@@ -22,6 +27,15 @@ body {
 
 .sidebar {
     grid-area: sidebar;
+    background-color: rgb(64, 144, 210);
+    border: 4px solid red;
+    color: white;
+    display: grid;
+    gap: 4px;
+    grid-template-rows: repeat(3, auto);
+     /* The auto in the above means that the size of each row is based on the content inside it. */
+    align-content: start;
+    gap: 30px;
 }
 
 .main-content {
@@ -124,3 +138,9 @@ input[type="search"] {
     margin-top: 5px;
     font-size: 1.5em;
 }
+
+.dashboard-set1 {
+    display: grid;
+    grid-template-rows: repeat(auto, 1fr);
+}
+
